Added time/D plot

--- a/notebooks/MatrixSquareRoot.ipynb
+++ b/notebooks/MatrixSquareRoot.ipynb
@@ -124,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed for V1 is: 0.0236489772797s\n",
+      "Time elapsed for V1 is: 0.015300989151s\n",
       "[[ 1.  0.  0. ...,  0.  0.  0.]\n",
       " [ 0.  1.  0. ...,  0.  0.  0.]\n",
       " [ 0.  0.  1. ...,  0.  0.  0.]\n",
@@ -132,7 +132,7 @@
       " [ 0.  0.  0. ...,  1.  0.  0.]\n",
       " [ 0.  0.  0. ...,  0.  1.  0.]\n",
       " [ 0.  0.  0. ...,  0.  0.  1.]]\n",
-      "Time elapsed for V2 is: 0.0395441055298s\n",
+      "Time elapsed for V2 is: 0.0181260108948s\n",
       "[[ 1.  0.  0. ...,  0.  0.  0.]\n",
       " [ 0.  1.  0. ...,  0.  0.  0.]\n",
       " [ 0.  0.  1. ...,  0.  0.  0.]\n",
@@ -178,7 +178,7 @@
    ],
    "source": [
     "#opening data\n",
-    "data1 = \"/home/chris/Documents/QPP/SolarFlareGPs/data/121022782_ctime_lc.txt\"\n",
+    "data1 = \"/users/chris/Documents/QPP/SolarFlareGPs/data/121022782_ctime_lc.txt\"\n",
     "t1, I1 = np.loadtxt(data1, unpack=True)\n",
     "\n",
     "def makeV3(t, sigmarange=[100,300], A=300, tau=30):\n",
@@ -202,32 +202,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed for V3 is: 0.0298261642456s\n"
+      "Time elapsed for V3 is: 0.0173990726471s\n",
+      "True\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "w3, logdet3, dt3 = matrixsqrt(V3, label=\"V3\")\n",
     "result = np.dot(V3, np.dot(np.ndarray.transpose(w3), w3))\n",
     "#Didn't print the matrix because it's too big and contains small off-diagonal elements \n",
-    "np.allclose(result,np.identity(len(t1)))"
+    "print np.allclose(result,np.identity(len(t1)))"
    ]
   },
   {
@@ -239,21 +230,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Working...\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYsAAAEOCAYAAAB4nTvgAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XucXHV9//HXe2dvySaZ3JZbQkiCQQkFQVe0jYBFLiFa\nsJUWpFioFIoVKz+1Xn4qVFpbtUq9YYUCldIf4t1GGkQQRAm3bCCSEkWTaCARTEKS2ZDL3ubz++Oc\nhMlmszMJmTmZ3ffz8ZjHnMv3e76fb0jmwznfc85XEYGZmdlQGrIOwMzMDnxOFmZmVpaThZmZleVk\nYWZmZTlZmJlZWU4WZmZWlpOFmZmV5WRhZmZlOVmYmVlZThZmZlZWY9YB7C+TJ0+O6dOnZx2GmVld\nWbx48fqIaC9Xbtgki+nTp9PZ2Zl1GGZmdUXSqkrK+TKUmZmV5WRhZmZlOVmYmVlZThZmZlaWk4WZ\nmZXlZGFmZmU5WZiZ1bMHH4Sf/rTqzVQ1WUiaK+kpScslfWiQ/ZdLWippiaQHJM1Ot0+XtC3dvkTS\nV6oZp5lZ3fr4x+EDH6h6M1V7KE9SDrgOOB1YDSySND8ilpUUuy0ivpKWPxu4Fpib7lsREcdXKz4z\ns2GhqwvGjat6M9V8gvtEYHlErASQdDtwDrAzWUREV0n5NiCqGI+Z2bDz1adPZfvBR3B5ldupZrKY\nAjxTsr4aeO3AQpLeBbwXaAZOLdk1Q9LjQBfw0Yio/kU5M7M6c+vzZ9Hdd3DVk0XmA9wRcV1EHAl8\nEPhouvlZYFpEnECSSG6TtNt5lqTLJHVK6ly3bl3tgjYzO0AUetvIj+6tejvVTBZrgMNL1qem2/bk\nduAtABHRHRHPp8uLgRXAUQMrRMQNEdERER3t7WVfmmhmNrwUixSKY8iP6at6U9VMFouAWZJmSGoG\nzgfmlxaQNKtk9U3Ar9Lt7ekAOZJmArOAlVWM1cys/mzZQoE8+bHFqjdVtTGLiOiTdAVwF5ADbo6I\nJyVdA3RGxHzgCkmnAb3ARuCitPrJwDWSeoEicHlEbKhWrGZmdamriwKTyed/W/WmqjqfRUQsABYM\n2HZVyfJ79lDv28C3qxmbmVm9275uMz1MIT+++sPPmQ9wm5nZvin8dgsA+Ym5qrflZGFmVqcKv9sO\nQH5yU9XbcrIwM6tThbXdgJOFmZkNobCuB4D8wa1Vb8vJwsysThU29AOQP3R01dtysjAzq1OFjU4W\nZmZWRmFT8u0xCzMz26NClwAYO7b6bTlZmJnVqcKWHGMbXiBX/ccsnCzMzOpVYUsT+dwLNWnLycLM\nrE5t2tZCvnlbTdpysjAzq1OF7hbyLdtr0paThZlZnSr0jCbf2lOTtpwszMzqVKGvjXxb9WfJAycL\nM7P6FJHOktdfk+acLMzM6lF3dzpLXtSkOScLM7M6tH1tFz20kM/Xpj0nCzOzOrRz4qMJtfkZd7Iw\nM6tDhWe3AjB+Ug0e36bKyULSXElPSVou6UOD7L9c0lJJSyQ9IGl2yb4Pp/WeknRmNeM0M6s3tZwl\nD6qYLCTlgOuAs4DZwNtKk0Hqtog4NiKOBz4NXJvWnQ2cDxwDzAW+nB7PzMwomSXvoJaatFfNM4sT\ngeURsTIieoDbgXNKC0REV8lqG7BjWP8c4PaI6I6IXwPL0+OZmRlQeD55vqIWs+QBNFbx2FOAZ0rW\nVwOvHVhI0ruA9wLNwKkldR8eUHdKdcI0M6s/hedrN/ERHAAD3BFxXUQcCXwQ+Oje1JV0maROSZ3r\n1q2rToBmZgegwqbkQkx+ypiatFfNZLEGOLxkfWq6bU9uB96yN3Uj4oaI6IiIjvb29pcYrplZ/SgU\nku+x7bW5DFXNZLEImCVphqRmkgHr+aUFJM0qWX0T8Kt0eT5wvqQWSTOAWcCjVYzVzKyuFDaLsWwm\n16iatFe1MYuI6JN0BXAXkANujognJV0DdEbEfOAKSacBvcBG4KK07pOSvgEsA/qAd0VEbV6AYmZW\nBwovNJLPbQZqMKcq1R3gJiIWAAsGbLuqZPk9Q9T9BPCJ6kVnZla/ClubyDdurVl7mQ9wm5nZ3its\nb67ZLHngZGFmVpcK3aPIt9ZmljxwsjAzq0uF3lHkR9Vm4iNwsjAzq0uF/jE1myUPnCzMzOpSoTiW\n/JhizdpzsjAzqzPdW/roppX8uNrMkgdOFmZmdaew5gUA8uNr16aThZlZnXlxlrzazdzgZGFmVmcK\nzyXPV+QnVfW56l04WZiZ1Zmds+S1N9esTScLM7M6s2ltD1C7WfLAycLMrO4Unu8DIH/IqJq16WRh\nZlZnChtqO0seOFmYmdWdHbPkjZtSm9eTg5OFmVndKXSJMWwml6/NlKrgZGFmVncKmxvIqwsaavcT\nXvYmXUmtwJuBk4DDgG3A/wL/ExFPVjc8MzMbqLClkXzuhZq2OWSykPRxkkTxY+ARYC3QChwFfDJN\nJO+LiCeqHKeZmaUK25rIN9Vuljwof2bxaERcvYd910o6CJi2n2MyM7MhFLa30t68vqZtDnnBKyL+\nZ+A2SQ2SxqX710ZE557qS5or6SlJyyV9aJD975W0TNITkn4k6YiSff2SlqSf+XvXLTOz4avQ00q+\ntbumbVY0OiLpNknjJLWRjFcsk/R3ZerkgOuAs4DZwNskzR5Q7HGgIyKOA74FfLpk37aIOD79nF1h\nf8zMhr1Cbxv50bWb+AgqvxtqdkR0AW8B7gRmAG8vU+dEYHlErIyIHuB24JzSAhFxX0TsuPD2MDC1\n4sjNzEaoQn8b+ba+mrZZabJoktREkizmR0QvUG7WjSnAMyXrq9Nte3IJSSLaoVVSp6SHJb2lwjjN\nzIa17m6SiY/G1m6WPKjg1tnU9cBvgJ8BP0nHFrr2VxCSLgQ6gFNKNh8REWskzQTulbQ0IlYMqHcZ\ncBnAtGkeZzez4S95elvk87WbJQ8qPLOIiC9ExJSImBcRATwN/GGZamuAw0vWp6bbdiHpNOAjwNkR\nsXPEJiLWpN8rSW7dPWGQuG6IiI6I6Ghvb6+kK2Zmda3wbHLlPj++ts9UD9mapAsl7VYmEn2SjpT0\n+j1UXwTMkjRDUjNwPrDLXU2STiA5azk7ItaWbJ8gqSVdngzMAZbtTcfMzIajncliYu1myYPyl6Em\nAY9LWgwsBtaRPJT3MpJLRuuB3W6JBUiTyRXAXUAOuDkinpR0DdAZEfOBfwHGAN+UBPB0eufT0cD1\nkookCe2TEeFkYWYjXhaz5EGZZBERn5f0JeBUkv+7P47kdR8/B94eEU+Xqb8AWDBg21Uly6ftod6D\nwLGVdMDMbCQprE2u1tdyljyoYIA7IvqBu9OPmZllqLAunSXv4Naatuu3zpqZ1ZHChnSWvBpOfARO\nFmZmdaWwIXm+YtyhbTVt18nCzKyOFAokEx9NGFfTdit9N9TBkm6SdGe6PlvSJdUNzczMBip0iTwF\nGFu7KVWh8jOLr5LcAntYuv5L4MpqBGRmZntWeCGdJa+5tndDVZosJkfEN4AiJM9QAP1Vi8rMzAZV\n2NJEPrel5u1Wmiy2SJpE+vJASa8DClWLyszMBlXY1ky+ubaz5EHlLxJ8L8mrOo6UtBBoB86tWlRm\nZjaoQncLM1u217zdipJFRDwm6RTg5YCAp9LXlJuZWQ0VekaRH9dT83YrShbprHfzgOlpnTMkERHX\nVjE2MzMbYFPfmJrPkgeVX4b6PrAdWEo6yG1mZrXV3Q3d0UJ+TG1nyYPKk8XUdJ5sMzPLSCG9rSg/\ntrYTH0Hld0PdKemMqkZiZmZD2pks8rVvu9Izi4eB76YTIfWSDHJHRNT2eXMzsxEseeNsM/kJtX9T\nU6XJ4lrg94Gl6bSqZmZWY8ksec01nyUPKr8M9Qzwv04UZmbZKfwueb4iP7mp5m1XemaxEvhx+iLB\n7h0bfeusmVnt7Jglb/zBLTVvu9Izi18DPwKagbElnyFJmivpKUnLJe02V7ek90paJukJST+SdETJ\nvosk/Sr9XFRhnGZmw1ZhffJ8Ra1nyYPKn+D++N4eOH2Q7zrgdGA1sEjS/IhYVlLscaAjIrZKeifw\naeA8SROBq4EOkvdRLU7rbtzbOMzMhovChuT9reMOqe0seVAmWUj6XERcKen7pC8RLBURZw9R/URg\neUSsTI91O3AOsDNZRMR9JeUfBi5Ml88E7o6IDWndu4G5wNfK9sjMbJgqbCxmMvERlD+zuDX9/sw+\nHHsKycD4DquB1w5R/hLgziHqTtmHGMzMho1CgWTio3EHWLKIiMXp4vER8fnSfZLeA9y/P4KQdCHJ\nJadT9rLeZcBlANOmTdsfoZiZHbAKmxvSZDGj5m1XOsA92ADzxWXqrAEOL1mfmm7bhaTTgI8AZ0dE\n997UjYgbIqIjIjra29vLhGNmVt8KL+TI0wWjRtW87XJjFm8DLgBmSJpfsmsssKHMsRcBsyTNIPmh\nPz89VunxTwCuB+ZGxNqSXXcB/yRpQrp+BvDhMu2ZmQ1rha1NTGrcAlLN2y43ZvEg8CwwGfhsyfbN\nwBNDVYyIPklXkPzw54CbI+JJSdcAnRExH/gXYAzwTSWdfzoizo6IDZL+gSThAFyzY7DbzGykKmxv\nZmbztkzaLjdmsQpYRfKqj70WEQuABQO2XVWyfNoQdW8Gbt6Xds3MhqNCdyv50bWfJQ8qH7MwM7OM\nFXpHkx9V+1nywMnCzKwu9PTA9mIL+bbaT3wEThZmZnVh51wWY/ozab/SObjnAH8PHJHW2TGfxczq\nhWZmZjvsTBbjsnn5d6Vvnb0J+D/AYiCbtGZmNoLtTBbja3/bLFSeLAoRcWf5YmZmVg3JSwRzmcyS\nB5Uni/sk/QvwHXadz+KxqkRlZma7SCY+aiM/qdKf7f2r0lZ3vACwo2RbAKfu33DMzGwwO5NFBrPk\nQeXzWfxhtQMxM7M9K6xLnq/IZzBLHlR466ykvKRrJXWmn89Kylc7ODMzS+yYJW/cwbWf+Agqf87i\nZpL3Qf1Z+ukC/qNaQZmZ2a4KG/tp4wUaJ5Sd0boqKh2zODIi3lqy/nFJS6oRkJmZ7W7Txshs4iOo\n/Mxim6TX71hJH9LL5tWHZmYjUKGgTJNFpWcW7wRuSccpRDKXxcXVCsrMzHb14ix52cwwXendUEuA\nV0oal653VTUqMzPbRWFLIxMpwJgxmbRfbqa8CyPivyS9d8B2ACLi2irGZmZmqcK2JmY0boFcLpP2\ny51ZtKXfgw2/Z/M2KzOzEaiwvYV8U3ZDxeVmyrs+XbwnIhaW7ksHuc3MrMq6umDdtrFMmbQxsxgq\nvRvqixVuMzOz/ezhh6FIA78/6ZeZxVBuzOL3gT8A2geMW4wDyl44kzQX+Hxa9saI+OSA/ScDnwOO\nA86PiG+V7OsHlqarT0fE2eW7Y2Y2/CxcCA3087pDV2UWQ7kxi2ZgTFqudNyiCzh3qIqScsB1wOnA\namCRpPkRsayk2NMkt+C+f5BDbIuI48vEZ2Y27C1cCMe1/pJxE7N54yyUH7O4H7hf0lcjYm9T2onA\n8ohYCSDpduAcYGeyiIjfpPuKe3lsM7MRoa8vuQx1ceOjmT2QB5U/lPdVSbvd/RQRQ72ifArwTMn6\nal581XklWiV1An3AJyPie3tR18xsWHjiCdiyBea0/Bjy2b2/tdJkUXqZqBV4K8mPeDUdERFrJM0E\n7pW0NCJWlBaQdBlwGcC0adOqHI6ZWe0tTO9DndP9I3jdpzKLo9InuBcP2LRQ0qNlqq0BDi9Zn5pu\nq0hErEm/V0r6MXACsGJAmRuAGwA6Ojr83IeZDTsPPABTxxWY9sIaOOOMzOKodD6LiSWfyZLOBMqd\nDy0CZkmaIakZOB+YX2F7EyS1pMuTgTmUjHWYmY0EEcmZxesbH4ETT4RJkzKLpdLLUItJntgWyeWn\nXwOXDFUhIvokXQHcRXLr7M0R8aSka4DOiJgv6TXAd4EJwB9J+nhEHAMcDVyfDnw3kIxZOFmY2Yjy\n9NOwZg3M4fswd26msVR6GWrGvhw8IhYACwZsu6pkeRHJ5amB9R4Ejt2XNs3Mhoud4xU8AGddP3Th\nKqv0MtS7JI0vWZ8g6W+qF5aZmS1cCGMat3HspGehoyPTWCp93celEbFpx0pEbAQurU5IZmYGsHBh\n8Do9SuOZb4SGSn+uq6PS1nPa8V5ydj6d3VydkMzMrFBInrGY03sfnHVW1uFUnCx+AHxd0hslvRH4\nWrrNzMyq4OGHIUK8ngcyvWV2h0rvhvog8Nck06sC3A3cWJWIzMxs58sDX3tCLxx0UNbhVHw3VFHS\nV4F7I+Kp6oZkZmYLf9zLK1nK2DefknUoQOV3Q50NLCG99CTpeEkVPWBnZmZ7p68PHnkU5rAw8+cr\ndqh0zOJqkrfIbgKIiCXAPj17YWZmQ/vZz2BLdxNz2n6WPLl9AKg0WfRGRGHANr+LycysChY+kMza\nMOcPm6ExuzksSlUaxZOSLiC5hXYW8LfAg9ULy8xs5HrgfwpMo4vD33pgnFVA5WcW7waOAbqB24AC\ncGW1gjIzG6kiYOEjjcl4xZlnZh3OTpXeDbUV+Ej6MTOzKlm1Cn7bNZY5U1bBoYdmHc5Old4Ndfcg\n74a6q3phmZmNTAvv3grAnDPHZBzJriq9DDV5kHdDZf+UiJnZMLPw288xli6OffvxWYeyi0qTRVHS\nznlLJR2B74YyM9vvFi5q4nW5TnJzXpd1KLuo9G6ojwAPSLqfZAKkk0jnvjYzs/2jsClYumEKb529\nEJqasg5nF5UOcP9A0quAHanuyohYX72wzMxGnntveZrgCE6Zd2CNV0DlA9yXRMT6iLgjIu4ANkq6\nusqxmZmNKAu+1sU4CvzBO1+ZdSi7qXTM4o2SFkg6VNIxwMPA2CrGZWY2okTAnUsO4fSxD9M08/Cs\nw9lNRckiIi4AbgGWksypfWVEvL9cPUlzJT0labmkDw2y/2RJj0nqk3TugH0XSfpV+rmosu6YmdWn\npYu2s6a7nXmv3ZB1KIOq9DLULOA9wLeBVcDbJY0uUycHXAecBcwG3iZp9oBiTwMXkzwVXlp3IsnL\nC19L8gLDqyVNqCRWM7N6dOcNzwAw9y8OzKcSKr0M9X3gYxHx18ApwK+ARWXqnAgsj4iVEdED3A6c\nU1ogIn4TEU8AxQF1zwTujogN6TMddwMHxnt6zcyqYMFdDRyvJRz2JwfWLbM7VJosToyIHwFE4rPA\nH5epMwV4pmR9dbqtEi+lrplZXdm0CRauPoKzpi2DtraswxnUkMlC0gcAIqJL0p8O2H1xtYKqlKTL\nJHVK6ly3bl3W4ZiZ7ZN7vrmRfhqZd9aB+6xzuTOL80uWPzxgX7nLQmuA0iH9qem2SlRUNyJuiIiO\niOhob2+v8NBmZgeWBbeuZzwbed0lx2Qdyh6VSxbaw/Jg6wMtAmZJmiGpmSTxVDoV613AGekLCycA\nZ6TbzMyGlQi4c9Fkzmj5CY2vOi7rcPaoXLKIPSwPtr7rzog+4AqSH/mfA9+IiCclXZPO6Y2k10ha\nDfwpcL2kJ9O6G4B/IEk4i4Br0m1mZsPKkseKPLd9AvNe9Rw0VDqMXHvlXvfxSkldJGcRo9Jl0vXW\ncgePiAUkz2WUbruqZHkRySWmwereDNxcrg0zs3q24ObngMOYe8HErEMZ0pDJIiJytQrEzGwkuvN/\n+nk1nRx87klZhzKkA/ecx8xsmNuwAR5adRhnHfQYHHJI1uEMycnCzCwjd39/O0VyzDutJ+tQyqp0\nPgszM9vPFvzneiYyihP/4hVZh1KWzyzMzDJQLMKdD+U5M3cPuVNen3U4ZTlZmJll4LHHYN22scw7\nZhW0lr25NHNOFmZmGVhw2yZEkTPPHZd1KBVxsjAzy8Cd/93Na1hE+1tPzjqUijhZmJnV2Pr18MjK\nds4auxCOPjrrcCriZGFmVmP/cVORoIF5p2wBlXvN3oHBycLMrIaWLoWPXQV/xHxe8+dHZR1Oxfyc\nhZlZjWzfDn9+QZF8cSM35t+Pznwk65Aq5mRhZlYjH/0oLP3fBu7gLzjoPz8DEyZkHVLFnCzMzGrg\n3nvh2muDd/JvvOnKo+Dss7MOaa84WZiZVdnGjXDRhX0cpZV85vjb4FP3Zh3SXnOyMDOrogh4518X\nee45eGj0ZYz+5i3Q3Jx1WHvNycLMrIpuuw2+/s0G/pGP0XHz38CRR2Yd0j5xsjAzq5JVq+BvLutl\nDo/woUs3wJ/9WdYh7TMnCzOzKigW4S8v6Ka4rZdbX/4Jcp//TtYhvSRVfShP0lxJT0laLulDg+xv\nkfT1dP8jkqan26dL2iZpSfr5SjXjNDPb377y0dXc92AL/9r0AWZ8719h1KisQ3pJqnZmISkHXAec\nDqwGFkmaHxHLSopdAmyMiJdJOh/4FHBeum9FRBxfrfjMzKpl5bXf4wP/fBpnttzHJfe+HV5x4E9u\nVE41zyxOBJZHxMqI6AFuB84ZUOYc4JZ0+VvAG6U6eVGKmdlAPT0U3/0e3vG+8eRy8O8P/h76g9/P\nOqr9oprJYgrwTMn66nTboGUiog8oAJPSfTMkPS7pfkknDdaApMskdUrqXLdu3f6N3sxsbzz7LJx6\nKl/+Uj/38wau/XIrh7+qPeuo9psD9UWCzwLTIuIE4L3AbZJ2myEkIm6IiI6I6GhvHz7/Ucyszjz0\nELzqVaxYvIkPtnyOuXPhHZcOr/uHqpks1gCHl6xPTbcNWkZSI5AHno+I7oh4HiAiFgMrgPp5PaOZ\njRwbN8LZZ1McPYZ3HPMITa2N/Pu/182bxytWzWSxCJglaYakZuB8YP6AMvOBi9Llc4F7IyIktacD\n5EiaCcwCVlYxVjOzffOxj8GGDXzp3B/zk8Vt/Ou/wtSpWQe1/1XtPCki+iRdAdwF5ICbI+JJSdcA\nnRExH7gJuFXScmADSUIBOBm4RlIvUAQuj4gN1YrVzGyfLFkC//ZvLL/gKj70xSnMmwcXX5x1UNWh\niMg6hv2io6MjOjs7sw7DzEaKYhFOOoltv3yGNxyxkqeWN/LkkzBl4G08BzhJiyOio1y54TUCY2ZW\nK7feSvHBh3j7q1ey6LFGvv3t+ksUe8PJwsxsb23aBB/4AB889D/59uLpXHst/PEfZx1UdTlZmJnt\nrauv5strz+UzXMgVV8CVV2YdUPU5WZiZ7Y0nnuCOL/6ad+t7/NGb4XOfG363yQ7mQH0oz8zswBPB\n4ou+wHnxNU44rsjXvga5XNZB1YaThZlZhVZ94b9585J/oH1SkTt+0EhbW9YR1Y6ThZlZGdFf5M6/\nu5fT3nss23JjWHDfaA45JOuoasvJwsxsCD+9fhknT3iCeZ85lWJTC9+/ZSOzjx0h155KOFmYmQ3i\n8R+uY97Un3Hy5bNZseUQ/u0vHuLnmw7jpD+flnVomfDdUGY2okXAhg3w61+nn19089Dtv+F7y17O\nRBr49BsW8K6vvZ7RhwyPeSn2lZOFmY04EXDjjfDlL8OKFbB5c+neFtqZwMeO+jrvu/015E+Yl1WY\nBxQnCzMbUVasgEsvhfvugxNPhIvnrWXGr+5ixpLvMSNWMuOc4xj3wXfC684rf7ARxMnCzIa3nh5Y\ntYr+363nC18dx0dufTlN6ueGM77PX239Avr6T2HsWHjPX8HffhamT8864gOSk4WZDS9dXfDgg/DA\nA/DTn8Kjj7Js+wwu4SYe5hjexB18hcuZev/6JDF89rNwySWQz2cd+QHNycLM6t+KFckgxA9+wKaf\nreJXcSS/1Cv45SEX8tS0z/HdlccxdnQ///X+lVxw4e+h9l9AW9vIeE/HfuJkYWb1qa+P4vw7eOJf\n7uKHD4/lbs7gZ00fYF1MSPYH6DmY3goXXAif+lSOgw6amW3MdczJwswOHBHw2GPwne/AT34CEyfC\n4Yfv/MTUw1nT0859X/45P/xBkbu3zeF3vAWAY4/u5Zw5TRx1FBx1FMyaBTNnQmtrxn0aJpwszKyq\n1q1L7jzasgVe8Qo4+mgYP76kQH8/LFyYJIjvfpetT6/jNw1HsnLWmaxcMZmVP8izsmcKK5nJSmay\njdHAK2hv3sTpJ2/mjIv6OX1ujsMOa8qqiyNCVZOFpLnA50nm4L4xIj45YH8L8J/Aq4HngfMi4jfp\nvg8DlwD9wN9GxF3VjNXM9o+tW5Ox5XvugXvuCR5/fPdxgYPbNnP02NW8onE5kzb8ilVb21mp81jZ\nfBXPMRGKwFNJ2bY2mDmrn5cdvJUzxq9l5ujfMefPpvDKN02loWH8bse26qhaspCUA64DTgdWA4sk\nzY+IZSXFLgE2RsTLJJ0PfAo4T9Js4HzgGOAw4B5JR0VEf7XiNbPdRTHo7urmhd9tYcu6rWx5fjtb\nnt/O5vXdrF+9nbW/7WXt72Dt8w2s3dTCsy+M4bEXjqInmmmihz/gQf6RuzmNe5jIBn7BK5LP1qP5\nee9x3N5/Cl3FN3F4+zZmHt3CvJc1MnNmcvloxozku70dkp+TselnerZ/KCNUNc8sTgSWR8RKAEm3\nA+cApcniHODv0+VvAV+SpHT77RHRDfxa0vL0eA9VMV4byXp7k+sk3d0vfnp6di739gSbtreycWsL\nm7a1sGlrMxu3NNNHI+Mn5ZgwOcf4g5qZcHAzEyY17HadPIpBsa9If2+R3u399HYXd/v09/RT7Omj\n2NtP9PbtXC72JuX7uvvp7Qn6egbU3bke9HQHvT1Ftm8XW7c3sLU7x9bu9LunkZ5e0dsr+vqgt0/0\n9ou+ftHTl2NbXxPbi01s729iW7GF7dHCNkZRpBVoBSYN+kfXQD+TtIGDmjdx0KjNXDHzTk6fsZyT\nZj1H2+RRkJ8I+Uth8mRmTZnCH02ZAgcfDLkcEclVqMbGEfSu7zpVzWQxBXimZH018No9lYmIPkkF\nkr+RU4CHB9StylToXau7OO+EX/KLTQczZ+rTu+wLtHNp57bY/ZS6f8s2fqspTBm1kf5ooBiinwb6\niw30R/oh/S42EIicijs/jerfZf13Xa0c1LaV5sY9nEgF9EWOvmigr/jid2/kku3FhnR/jr5ijgYV\naWvsZnSuh9GN3YzK9ZJTsfRwux5+QB+jpFCUbEz+fGKXOi/+mSVjlaV1XiwzYL2k3C5lBmkj9vBd\nWn/H8YvrxUjyAAAI4ElEQVQh+tM/p/7I0R/Jn0t/iL5iA/1F0V9sSPaTSz8tFBlFPzmKNJR8790/\nlUZ6kxhooEgOEMnV2BxQu2vrLWxnNFsZzVZGaTst6qWpoY/GhiJNuX6aGoq05IKxTf2MauuntbnI\nqOZ+WluC1lYYNQraxkDbmAbGjGugLd/ImAlNtE1opn16GwcdNZ6JM8eTa2oH2tNWX1VxfBI0euS0\nLtT1fyZJlwGXAUybtm9vghw1cRRbexoRwcOrp+7exo6fHg2yLfXr3qlM4xnWNh2c/ODTn/xEpMs5\niuTUu3NZBP3k6Cb9EaOBPlrSpJL8yHd2HcX05t8OGnMgGtVPE300qo9G9SffdDNaJdvop1H99EcD\nW7tb2Vps5bloZUtx/C4/6oP1aff1F/8MSveVHkWKQfbHLuVeLDN4HQ1RpnT/i9+ly6KhoZisE0hB\no7pfTMoN/eQU5HJBY5PINTWQa8rR2NxArjmXfJoayDU10NAock05GpoayDU20NIcTBjdzfhR3Uxo\n3cb41u1MaNlKrr+HTZtgY6GBTZtzbNzcyMYXGuna1kRDAzQ0iIaGZDa1ZB2amoKmRmhqjBc/TZBr\nTGJSYwMNjQ00NOZQY46GxgaaWpJPY/Ou302tOZpGNe78NI9OvkeNa6J1bBO51ibITQBNHPTvklml\nqpks1gCHl6xPTbcNVma1pEYgTzLQXUldIuIG4AaAjo6Ogf+DXJGm0U3cXzh+X6oOUI37t31PuJkd\nGKo5n8UiYJakGZKaSQas5w8oMx+4KF0+F7g3IiLdfr6kFkkzgFnAo1WM1czMhlC1M4t0DOIK4C6S\nC7U3R8STkq4BOiNiPnATcGs6gL2BJKGQlvsGyWB4H/Au3wllZpYdRezT1ZsDTkdHR3R2dmYdhplZ\nXZG0OCI6ypXztKpmZlaWk4WZmZXlZGFmZmU5WZiZWVlOFmZmVtawuRtK0jpgVdZxVGgysD7rIKpo\nOPfPfatfw7l/L6VvR0REe7lCwyZZ1BNJnZXcqlavhnP/3Lf6NZz7V4u++TKUmZmV5WRhZmZlOVlk\n44asA6iy4dw/961+Def+Vb1vHrMwM7OyfGZhZmZlOVmYmVlZThZmZlaWk0VGJL1F0r9L+rqkM7KO\nZ3+T1CapU9Kbs45lf5PUIOkTkr4o6aLyNeqHpGmSvifpZkkfyjqe/UHSTEk3SfpWut4m6Zb039+f\nZx3fSzVI/6ry2+JkUWWSDpd0n6Rlkp6U9B6AiPheRFwKXA6cl22U+2ZPfUt9EPhGVrHtD0P07xyS\nqX57gdXZRbjvhujbscC3IuIdwAkZhrjXhvi3tjIiLikp+ickfbwUODuTYPdBpf2r1m9LNefgtkQf\n8L6IeEzSWGCxpLsjYlm6/6PAddmF95IM2jdgCsksh62ZRvfS7al/LwcejIjr0/+b+1GmUe6bPfXt\nYeBbkt4B3JpphHuv3L+1HaYCS9PlepqBs9L+7bBff1ucLKosIp4Fnk2XN0v6OTAl/f4kcGdEPJZl\njPtqT30D3gC0AbOBbZIWREQxs0D30RD9Ww30pMXq6cdmpyH6Ng+4OiJ+kibC/8gwzL0yRJ8G/piu\nJkkYS6ijqyuV9k+SqMJvi5NFDUmaTnJq/wjwbuA0IC/pZRHxlQxDe8lK+xYRd6fbLgbW12OiGGjA\nf7s+4IuSTgJ+kmFY+8WAvj0L/L2kC4DfZBfVS1PaJ0mTgE8AJ0j6MPAF4EuS3gR8P7MgX4Iy/dtC\nFX5b/FBejUgaA9wPfCIivpN1PPvTcO4bDO/+Dce+Dcc+lcqqf3VzClbPJDUB3wb+33D7yzuc+wbD\nu3/DsW/DsU+lsuyfzyyqLL1+eAuwISKuzDqe/Wk49w2Gd/+GY9+GY59KZd0/J4sqk/R64Kckd1/s\nuHb/fyNiQXZR7R/DuW8wvPs3HPs2HPtUKuv+OVmYmVlZHrMwM7OynCzMzKwsJwszMyvLycLMzMpy\nsjAzs7KcLMzMrCwnCxvWJPVLWpK+0vlnkt4nqezfe0kh6b9K1hslrZN0R5l6x0uaN8T+Dklf2Iv4\nD5Z0Rxr7MkkL0u2H7Zi/wKwW/CJBG+62RcTxAJIOAm4DxgFXl6m3Bfg9SaMiYhtwOrCmgvaOBzqA\n3R6UktQYEZ1A517Efw1wd0R8Pj3GcQAR8Vvg3L04jtlL4jMLGzEiYi1wGXBF+uqEchYAb0qX3wZ8\nbccOSSdKekjS45IelPRySc0kP+7npWcz50n6e0m3SloI3CrpDTvOTiR9XtJV6fKZkn4yyFnPoZRM\nsBQRT6Tlp0v633T5xrS9JenZz9Xp9r+TtEjSE5I+vtd/YGYlnCxsRImIlUAOOKiC4rcD50tqBY4j\neYX3Dr8AToqIE4CrgH+KiJ50+esRcXxEfD0tOxs4LSLeNuD4HyZJLH9I8trsvxzkde7XATcpmSHt\nI5IOG6RPf5WePZ0DrAe+qmQ6zVnAiSRnO6+WdHIFfTYblC9Dme1BRDyRzhvwNna/rJQHbpE0Cwig\naYhDzU8vZQ08/lZJl5LMifF/ImLFIGXukjQTmAucBTwu6fcGlksT2jeBd0fEKknvBs4AHk+LjCFJ\nHnU//4Zlw8nCRpT0h7cfWFthlfnAZ0hm/5tUsv0fgPsi4o/ThPLjIY6xZYh9xwLPA7udMewQERtI\nxlpuSy9hnQwsHlDsK8B3IuKedF3AP0fE9UO0bVYxX4ayEUNSO8mP6pciIiRNkVRu/uybgY9HxNIB\n2/O8OOB9ccn2zcDYCuM5AngfyYxnZ0l67SBlTpU0Ol0eCxwJPD2gzLuAsRHxyZLNdwHvSCfKIe1r\nJZfezAblZGHD3agdt84C9wA/BHYM9h5KMkXqHkXE6ogY7FbXTwP/LOlxdj1Dvw+YvWOAe0/HTQfY\nbwLen97ZdAlwY3o5qdSrgU5JTwAPATdGxKIBZd4PHFsyyH15RPyQ5GzkIUlLgW9RYRIzG4xfUW4j\nlqQrgKcjYn7WsZgd6JwszMysLF+GMjOzspwszMysLCcLMzMry8nCzMzKcrIwM7OynCzMzKwsJwsz\nMyvr/wOocxYpuGtk7wAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x109a72150>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "NArray = np.logspace(1, 15, base=2, dtype='int')\n",
+    "NArray = np.logspace(1, 12, base=2, dtype='int')\n",
     "dt1 = np.empty(len(NArray))\n",
     "dt2 = np.empty(len(NArray))\n",
+    "print \"Working...\"\n",
     "for i in range(len(NArray)):\n",
     "    w1, logdet1, dt1[i] = matrixsqrt(makeV1(NArray[i]))\n",
     "    w2, logdet2, dt2[i] = matrixsqrt(makeV2(NArray[i]))\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "ax.set_xscale('log', basex=2)\n",
-    "ax.xlabel(\"D, Matrix Size\")\n",
-    "ax.ylabel(\"Excecution time (s)\")\n",
+    "ax.set_xlabel(\"D, Matrix Size\")\n",
+    "ax.set_ylabel(\"Excecution time (s)\")\n",
     "ax.plot(NArray, dt1, 'r-')\n",
     "ax.plot(NArray, dt2, 'b-')\n",
     "plt.show()"
@@ -285,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
