--- a/paper/draft.tex
+++ b/paper/draft.tex
@@ -57,6 +57,7 @@
 \newcommand{\vdag}{(v)^\dagger}
 \newcommand\aastex{AAS\TeX}
 \newcommand\latex{La\TeX}
+\newcommand{\fermi}{\mbox{\textit{Fermi}}}
 
 %% Reintroduced the \received and \accepted commands from AASTeX v5.2
 
@@ -151,49 +152,40 @@ After demonstrating the effectiveness of these fitting methods, we go on to appl
 \section{Introduction} \label{sec:intro}
 Solar flares are the most powerful events in the solar system, releasing energies in excess of $10^{32}$~erg in tens of minutes across the entire electromagnetic spectrum \citep[e.g.\ ][]{fletcher2011}. 
 They are closely connected to the acceleration of particles into interplanetary space and thus with variations in the solar wind observed as space weather. 
-Solar flares tend to occur in magnetically active regions, and are believed to be caused by a rapid release of energy stored as inductive magnetic fields in the solar corona (Figure \ref{fig:flarearcade}). 
+Solar flares tend to occur in magnetically active regions, and are believed to be caused by a rapid release of energy stored as inductive magnetic fields in the solar corona. 
 
 Despite decades of study at all wavelengths, the exact conditions under which solar flares occur, their energy release mechanisms, and their radiation processes are not well understood.
 Magnetic reconnection is believed to be the primary driver of the energy release, but many open questions about the exact processes occurring remain. 
-%The hard X-rays are believed to be caused by bremsstrahlung of accelerated electrons as they precipitate in the solar chromosphere,  but both the details of the electron acceleration and precipitation are currently unknown.
+The hard X-rays are believed to be caused by bremsstrahlung of accelerated electrons as they precipitate in the solar chromosphere,  but both the details of the electron acceleration and precipitation are currently unknown.
 The detection of quasi-periodic pulsations (QPPs)\footnote{\normalsize{The same phenomenon is usually called quasi-periodic oscillation (QPO) in the astronomy community, but we will adhere to the solar physics nomenclature for consistency}} -- roughly coherent oscillations in the light curve on timescales of seconds to minutes -- has opened up the possibility of coronal seismology during solar flares. 
 There is particuarly strong interest in hard X-ray QPPs, because they are believed to carry information about both solar flare triggering and energy release mechanisms \citep[see e.g.][]{nakariakov2009}. 
-%Flares are bright features that can be observed down to fractions of a second, making it possible to resolve the wave transit time across magnetic plasma structures and thus study magnetohydrodynamic (MHD) waves in more detail than possible in any other way (see Figure \ref{fig:flarearcade} for an example of the magnetic configuration during a solar flare). 
+Flares are bright features that can be observed down to fractions of a second, making it possible to resolve the wave transit time across magnetic plasma structures and thus study magnetohydrodynamic (MHD) waves in more detail than possible in any other way. 
 
 Understanding these processes in detail is important not only for advancing our understanding of solar MHD processes and plasma physics, but also of interest in the context of stellar flares now observed in abundance with instruments like \textit{Kepler}. 
 Understanding the creation mechanisms of QPPs in solar flares will provide us with key diagnostics for the physical conditions in stars \citep[e.g.][]{kowalski2010}.
-\begin{figure}[tbph]
-\begin{center}
-\includegraphics[width=6.5cm]{flare_arcade.pdf}
-\caption{An arcade of magnetic field loops during  solar flare SOL2001-04-10T05:26, observed in the 171\AA\ channel of the TRACE satellite. From \citep{fletcher2011}}
-\label{fig:flarearcade}
-\end{center}
-\end{figure}
 The details of the MHD processes and reconnection physics in the sun are highly relevant to other phenomena observable with \fermi/GBM where magnetic reconnection likely plays a key role, for example bursts from magnetars, whose triggering mechanisms are currently unknown  \citep{turolla2015}. 
-%Magnetar bursts have been likened to solar flares in their statistical properties and morphology before \citep{prieskorn2012} and have also shown QPPs\citep{huppenkothen2014}, thus it is not inconceivable that, while magnetars are vastly different from the sun, similar processes might occur in terms of the underlying reconnection.
+Magnetar bursts have been likened to solar flares in their statistical properties and morphology before \citep{prieskorn2012} and have also shown QPPs\citep{huppenkothen2014}, thus it is not inconceivable that, while magnetars are vastly different from the sun, similar processes might occur in terms of the underlying reconnection.
 
-\subsection{State of the Art}
 The existence of QPPs in solar flares has been known for decades, but they have only recently emerged as key diagnostics of the plasma conditions and flare triggering processes \citep[e.g.][ and references therein]{nakariakov2009}. 
 A key driving factor is the ability to study active solar regions with a high spatial and spectral resolution in multiple wavelength ranges. 
 
 Significant progress has also been made in explaining QPPs with physical models, which generally fall into two classes.
 In the first, magnetic reconnection proceeds in a ``bursty'', somewhat regular fashion, modulating the number of accelerated electrons and thus the intensity of the observed radiation \citep{kliem2000,ofman2006,murray2009}. 
 The second class of models directly links the observed oscillations to MHD oscillations or waves in some of the flare parameters, e.g.\ the rate of energy release, particle acceleration, and particle dynamics \citep{nakariakov2007,pascoe2007}. 
-%In this case, periodicities are prescribed by resonances that act as direct tracer of the magnetic processes in the flare emitting region.
+In this case, periodicities are prescribed by resonances that act as direct tracer of the magnetic processes in the flare emitting region.
 
 It is likely that QPPs in different flares are generated by different mechanisms, and several mechanisms might occur in the same flare.
 It has been possible to infer the likely physical mechanisms operating for a very small sample ($\sim 5$) of flares \citep{asai2001,melnikov2005,inglis2008}. In particular, the detection of multiple independent QPPs in a single flare is highly indicative of the underlying process because various physical models allow only for very specific resonances \citep{melnikov2005,inglis2009}. 
 Multi-wavelength and spatially resolved data has also been crucial for understanding the properties of QPPs and their likely origin. 
 
-\subsection{Open Questions and Challenges}
 Despite the successes in identifying the QPP mechanisms in few individual flares, no overall picture of QPP formation has emerged for the majority of flares. 
-\textbf{Observational data and current data analysis techniques do not permit an unambiguous choice between various models of QPPs in solar flares.}
+Observational data and current data analysis techniques do not permit an unambiguous choice between various models of QPPs in solar flares.
 To date, none of the proposed models have been confidently excluded, nor have any been identified as the dominant QPP formation mechanism. 
 This is partly due to the lack of high-quality multi-wavelength or spatially resolved data for many flares. 
 However, there is a crucial dearth of large-scale sample studies of QPPs in solar flares, and it has therefore not been possible to relate QPP parameters to other physical properties of the flare. 
 Studies of solar flare variability are often framed as QPP searches, leaving the information contained in variability patterns largely unexplored. (though some studies of the wavelength-dependence of variability exist, \citep{mcateer2007}).
 
-The lack of large-scale studies of QPPs and variability is rooted in the technical challenge of QPP identification in the presence of complex structures in the hard X-ray light curve (Figure \ref{fig:lc_example}). 
+The lack of large-scale studies of QPPs and variability is rooted in the technical challenge of QPP identification in the presence of complex structures in the hard X-ray light curve. 
 Until recently, identification was a labour-intensive task, difficult to automate for large samples, and involved the manual de-trending of the light curve to remove the overall rising and falling trends of the \textit{flare envelope}, followed by a visual identification of the residuals to identify QPPs. 
 As recently pointed out by \citep{inglis2015} this method is also error-prone, because it does not correctly account for inherent aperiodic variability (also called ``red noise'') present in the flare.
 \citep{inglis2015} instead suggested a Fourier-based method taking account of this aperiodic variability based on methodology developed for Active Galactic Nuclei (AGN), while \citep{simoes2015} employed a similar approach using wavelets. 
@@ -290,12 +282,13 @@ Using the emcee package, we initialize a set of walkers to explore the parameter
 Let's talk about what happened.
 
 
+\bibliography{solarflares}
 
 
 
-\begin{thebibliography}{}
-	\bibitem[Something(2017)]{numbers}Something 2017
-\end{thebibliography}
+%\begin{thebibliography}{}
+%	\bibitem[Something(2017)]{numbers}Something 2017
+%\end{thebibliography}
 
 \end{document}
 
