rewritten bits of the abstract

--- a/paper/draft.tex
+++ b/paper/draft.tex
@@ -141,10 +141,14 @@ Office B356B\\
 Seattle, WA 98195, USA}
 
 \begin{abstract} \label{sec:abstract} 
-	Solar flare analysis for quasi-periodic oscillations (QPOs)  was formally done using Fourier power spectra analysis, limiting computational efficiency to $\mathcal{O}(n^2)$.
-We demonstrate a more effective and efficient method of modeling solar flare data using Gaussian Processes, a continuous-domain model, which scales at $\mathcal{O}(n)$ in one-dimensional models, and provide demonstrations of these methods by applying it to both simulated and real astronomical datasets.
-Using the package Celerite for Gaussian processes, we provide demonstrations of effectively modeling QPOs using a self-correllation function (a kernel function) to model and simulate solar flare phenomena, and then to remodel and capture the original characteristics of the simulated flare data, using standard optimization methods as well as Markov-chain Monte Carlo sampling.
-After demonstrating the effectiveness of these fitting methods, we go on to apply these modeling/fitting methods to capture the characteristics of real solar flare data, and discuss the potential use of the methods for automated solar flare and QPO detection.
+Despite decades of study at all wavelengths, the exact conditions under which solar flares occur, their energy release mechanisms, and their radiation processes are not well understood. Quasi-periodic pulsations (QPPs) in solar flares have recently emerged as key diagnostics of the plasma conditions and flare triggering processes, but detecting these pulsations reliably has in practice proven difficult. Here, we propose a new reliable and efficient method of modelling solar flare data using Gaussian Processes. This method allows for testing for the presence of a quasi-periodic signal in the presence of a flare envelope and other sources of non-periodic variability. We show the effectiveness of the new approach using both simulated data as well as solar flare observations of M- and X-class flares observed with GOES and the Fermi Gamma-Ray Burst Monitor (GBM).
+
+[ADD RESULTS HERE]
+
+	%Solar flare analysis for quasi-periodic oscillations (QPOs)  was formally done using Fourier power spectra analysis, limiting computational efficiency to $\mathcal{O}(n^2)$.
+%We demonstrate a more effective and efficient method of modeling solar flare data using Gaussian Processes, a continuous-domain model, which scales at $\mathcal{O}(n)$ in one-dimensional models, and provide demonstrations of these methods by applying it to both simulated and real astronomical datasets.
+%Using the package Celerite for Gaussian processes, we provide demonstrations of effectively modeling QPOs using a self-correllation function (a kernel function) to model and simulate solar flare phenomena, and then to remodel and capture the original characteristics of the simulated flare data, using standard optimization methods as well as Markov-chain Monte Carlo sampling.
+%After demonstrating the effectiveness of these fitting methods, we go on to apply these modeling/fitting methods to capture the characteristics of real solar flare data, and discuss the potential use of the methods for automated solar flare and QPO detection.
 \end{abstract}
 
 \keywords{keywords go here}
